Created the Menu page and it's relevant components such as DrinkCard and DrinkSection

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,12 @@
 body {
   background-color: #101622;
 }
+
+/* Hide scrollbar but keep scrolling */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
